--- a/Sebu/Today/src/main/resources/application.properties
+++ b/Sebu/Today/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.jpa.hibernate.ddl-auto = update
 
-spring.datasource.url = jdbc:mysql://localhost:3306/jpadb1
+spring.datasource.url = jdbc:mysql://localhost:3306/appledb
 
 spring.datasource.username = root
 
