--- a/Sebu/Employee-Mango/src/main/resources/application.properties
+++ b/Sebu/Employee-Mango/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port = 1234
 #Mongo Config
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database= berry
+spring.data.mongodb.database= camel
 spring.data.mongodb.repositories.enabled=true
 spring.data.mongodb.repositories.type = auto
 
