--- a/Sebu/Oignon/src/main/resources/application.properties
+++ b/Sebu/Oignon/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 # Server automatically runs on randon port number.,
-server.port = 0
+server.port = 8520
 #spring.main.web-application-type=reactive
-spring.main.web-application-type = none
+#spring.main.web-application-type = none
 
 #Disable the banner.,
-#spring.main.banner-mode = off
+spring.main.banner-mode = off
 
 # Database configurations
 spring.datasource.url=jdbc:mysql://localhost:3306/oignon?createDatabaseIfNotExist=true&useSSL=true
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.username =root
-spring.datasource.password =boss
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=boss
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql = true
 
