--- a/Sebu/Swagger_Demo/src/main/resources/application.yml
+++ b/Sebu/Swagger_Demo/src/main/resources/application.yml
@@ -4,11 +4,25 @@ server:
   port: 9876
   
 spring:
+#  datasource:
+#    url: jdbc:h2:mem:testdb
+#    driver-class-name: org.h2.Driver
+#    username: sa
+#    password: 
+#  h2:
+#    console:
+#      enabled: true
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    database-platform: org.hibernate.dialect.H2Dialect
+#    defer-datasource-initialization: true
+    
   application:
     name: Swagger_Demo
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/book_db
+    url: jdbc:postgresql://localhost:5432/studentdb
     username: postgres
     password: boss
     
@@ -17,6 +31,8 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     generate-ddl: true
     open-in-view: false
     
