--- a/Sebu/Swagger_Demo/src/main/resources/application.yml
+++ b/Sebu/Swagger_Demo/src/main/resources/application.yml
@@ -36,4 +36,8 @@ spring:
     generate-ddl: true
     open-in-view: false
     
+  mvc:
+    pathmatch:
+      matching-strategy: ant-path-matcher
+    
     
