--- a/Sebu/Swagger_Demo/src/main/resources/application.yml
+++ b/Sebu/Swagger_Demo/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
   
 spring:    
   application:
-    name: Swagger_Demo
+    name: Harpia
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/studentdb
