--- a/DataJPA/src/main/resources/application-dev.yml
+++ b/DataJPA/src/main/resources/application-dev.yml
@@ -2,4 +2,15 @@
 server:
   port: 2
   
-spring.datasource
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/studentsdb?createDatabaseIfNotExist=true
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: boss
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    generate-ddl: true
+    
