--- a/DataJPA/src/main/resources/application-dev.yml
+++ b/DataJPA/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
     password: boss
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     generate-ddl: true
     
