--- a/DataJPA/src/main/resources/application-dev.yml
+++ b/DataJPA/src/main/resources/application-dev.yml
@@ -13,4 +13,7 @@ spring:
       ddl-auto: create-drop
     show-sql: true
     generate-ddl: true
-    
+  security:
+    user:
+      name: datajpa
+      password: datajpa
