--- a/DataJPA/pom.xml
+++ b/DataJPA/pom.xml
@@ -31,6 +31,10 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 	-->	
+		 <dependency>
+	        <groupId>ch.qos.logback</groupId>
+	        <artifactId>logback-classic</artifactId>
+  	  </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
