--- a/DataJPA/pom.xml
+++ b/DataJPA/pom.xml
@@ -31,7 +31,12 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 	-->	
-	
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
