spring.profiles.active: test

--- a/DataJPA/src/main/resources/application-test.yml
+++ b/DataJPA/src/main/resources/application-test.yml
@@ -1,3 +1,19 @@
-#Testing Development configurations
+# Test Environment configuraions
 server:
-  port: 3
+  port: 1
+  
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/studentsdb?createDatabaseIfNotExist=true
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: boss
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    generate-ddl: true
+  security:
+    user:
+      name: datajpa
+      password: datajpa
