--- a/DataJPA/src/main/resources/application-test.yml
+++ b/DataJPA/src/main/resources/application-test.yml
@@ -4,13 +4,13 @@ server:
   
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/studentsdb?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/students(test)?createDatabaseIfNotExist=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: boss
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     generate-ddl: true
   security:
